# bayescalc

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Makefile  README.md  README.md.backup  TESTING.md  bayescalc.py  probs_cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  tst.inp
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  Release.md.template  Userguide.md
inputs/: alarm_subset.net  berkson_bias.inp  cancer.net  explaining_away_alarm.inp  explaining_away_alarm.net  explaining_away_alarm_shortcut.net  explaining_away_alarm_shortcut_long_names.net  inp2.inp  insurance_medium.net  insurance_network.net  insurance_network_small.net  markov_chain4.inp  medical_diagnosis_mini.net  medical_test.inp  medical_test.net  monty_hall.inp  parity5.inp  simpsons_paradox.inp  sprinkler.net  student_performance.net  traffic.net  weather_picnic.net  xor_triplet.inp
probs_core/: __init__.py  core.py  formatting.py  io.py  parsing.py  probability.py  stats.py  ui.py
scripts/: generate_api_reference.py  generate_readme_help.py  sequential_demo.py
tests/: conftest.py  test_alarm_subset_network.py  test_arith_safe.py  test_cli_entropy.py  test_cli_entropy_base_params.py  test_cli_entropy_integration.py  test_cli_integration.py  test_cli_pty_example.py  test_cli_pty_explaining_away.py  test_cli_pty_medical_test.py  test_cli_stats.py  test_compat.py  test_compat_import.py  test_completion.py  test_cond_probs.py  test_cond_probs_values.py  test_conditional_edge_values.py  test_edge_cases.py  test_edgecases.py  test_independence_queries.py  test_interactive.py  (+21 more)
